# new-arx-teleop

./: README.md
00-readme/: readme
00-sh/ROS/: 01make.sh  03single_vr.sh  04single_arm.sh  05double_vr.sh
00-sh/ROS2/: 01make.sh  03single_vr.sh  04single_arm.sh  05double_vr.sh  06_single_keyboard.sh
ARX_CAN/: arx_can.rules
ARX_VR_SDK/: .gitignore  readme.md
ARX_VR_SDK/ROS/src/serial_port/: CMakeLists.txt
ARX_VR_SDK/ROS2/src/serial_port/: CMakeLists.txt
ROS/R5_ws/src/arx_r5_ros/arx_r5_controller/: CMakeLists.txt  package.xml
ROS/R5_ws/src/arx_r5_ros/arx_r5_controller/include/arx_r5_controller/: KeyBoard.hpp  R5Controller.hpp
ROS/R5_ws/src/arx_r5_ros/arx_r5_controller/launch/: catch_action_fast.launch  open_double_arm.launch  open_keyboard_control.launch  open_remote_master.launch  open_remote_slave.launch  open_single_arm.launch  open_vr_double_arm.launch  open_vr_single_arm.launch
ROS/R5_ws/src/arx_r5_ros/arx_r5_controller/src/: KeyBoard.cpp  R5Controller.cpp
ROS/R5_ws/tools/: 03double_vr.sh
ROS2/R5_ws/src/ARX_R5_ros2_V7/arx_r5_controller/: CMakeLists.txt
ROS2/R5_ws/src/ARX_R5_ros2_V7/arx_r5_controller/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfacesPy.hpp  InterfacesThread.hpp
ROS2/R5_ws/src/ARX_R5_ros2_V7/arx_r5_controller/src/: R5Controller.cpp
Teleop/: basic_send_commands.py
py/ARX_R5_python/: calibration.json  requirements.txt  setup.sh  test_follower.py  test_tool.py
py/ARX_R5_python/bimanual/: CMakeLists.txt  __init__.py
py/ARX_R5_python/bimanual/lib/arx_r5_src/include/arx_r5_src/interfaces/: InterfacesThread.hpp
py/ARX_R5_python/bimanual/script/: single_arm.py
py/ARX_R5_python/bimanual/src/: arm_tools.cpp  single_arm_interface.cpp
